# libdtp

./: .gitignore  .gitmodules  Doxyfile.in  README.md  README.rst  configure  meson.build  meson_options.txt
.github/workflows/: build.yml
apm/: meson.build
apm/dtp_client/: meson.build
apm/dtp_client/src/: cmd_line.c  dtp_client_apm.c
apm/dtp_server/: meson.build
apm/dtp_server/src/: dtp_server_apm.c
apm/utils/: meson.build  session_hooks.c
conf/: dtp_client.csh  dtp_server.csh
doc/: cspftp.rst
include/cspftp/: cspftp.h  platform.h
include/dtp/: dtp.h  dtp_async_api.h  dtp_client_posix_segments_utils.h  dtp_file_payload.h  dtp_os_hal.h  dtp_protocol.h  dtp_session.h  dtp_vmem_client.h  dtp_vmem_server.h  platform.h
src/: csftp_server.c  cspftp.c  cspftp_client.c  cspftp_internal_api.h  cspftp_log.c  cspftp_log.h  cspftp_protocol.c  cspftp_protocol.h  cspftp_server.c  cspftp_session.h  dtp.c  dtp_client.c  dtp_client_posix_segments_utils.c  dtp_client_posix_session_hooks.c  dtp_file_payload.c  dtp_internal_api.h  dtp_log.c  dtp_os_hal.c  dtp_protocol.c  dtp_protocol.h  dtp_server.c  dtp_session.h  dtp_vmem_client.c  dtp_vmem_server.c  meson.build  payload_api.c  segments_utils.c  segments_utils.h  session_data.c
tests/: meson.build  test_1.c  test_integration_1.c  test_integration_2.c  test_segmentation.c  test_utilities.c  unity_test_utils.c  unity_test_utils.h
utils/: meson.build  session-meta.c
